--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ html {
 
 body {
   font-family: MyFont, "游ゴシック体", YuGothic, "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック", "Yu Gothic", sans-serif;
-  background-color: #f3efd0;
+  background-color: #e7e7e2;
 }
 
 header {
@@ -100,14 +100,13 @@ header {
 
 .about_container .about_message p {
   word-break: break-all;
-  max-width: 50%;
+  max-width: 70%;
   margin-left: auto;
   margin-right: auto;
   font-size: 20px;
 }
 
 .service_container {
-  height: 100vh;
   text-align: center;
 }
 
@@ -115,13 +114,24 @@ header {
   font-size: 45px;
 }
 
+.service_container .service_box {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(300px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-auto-rows: 1fr;
+  grid-gap: 1em;
+  padding: 1em;
+}
+
 .service_container .service_box .service_data {
-  background-color: #c9d8b6;
-  display: inline-block;
-  width: 25%;
-  height: auto;
-  overflow: hidden;
-  border-radius: 4px;
+  /*
+            display: inline-block;
+            width: 25%;
+            height: auto;
+            overflow: hidden;
+            border-radius: 4px;
+            */
 }
 
 .service_container .service_box .service_data a .img_box {
@@ -150,8 +160,9 @@ header {
 
 .service_container .service_box .service_data .service_content h3 {
   margin: 10px 5px;
-  font-size: 20px;
+  font-size: 18px;
   text-align: left;
+  border-bottom: solid 1px #515e63;
 }
 
 .service_container .service_box .service_data .link_box {
@@ -159,6 +170,7 @@ header {
   display: -ms-flexbox;
   display: flex;
   margin-right: 2px;
+  border-bottom: solid 1px #414242;
 }
 
 .service_container .service_box .service_data .link_box .link_button {
@@ -170,6 +182,7 @@ header {
   -webkit-transition: ease .3s;
   transition: ease .3s;
   font-weight: bold;
+  font-size: 14px;
 }
 
 .service_container .service_box .service_data .link_box .under_line:before {
@@ -198,7 +211,7 @@ header {
 }
 
 .contact_container {
-  height: 100vh;
+  height: 50vh;
   position: relative;
   text-align: center;
 }
@@ -215,11 +228,57 @@ header {
   font-size: 45px;
 }
 
-.contact_container .contact_message p {
-  word-break: break-all;
-  max-width: 50%;
-  margin-left: auto;
-  margin-right: auto;
+.contact_container .contact_message ul {
+  list-style: none;
+}
+
+.contact_container .contact_message ul li {
+  text-align: left;
   font-size: 20px;
+  margin: 5px 0;
+}
+
+.contact_container .contact_message ul li a {
+  text-decoration: none;
+  color: #000;
+}
+
+/*.slide_in{
+    opacity: 1;
+}*/
+.slide_in_animation {
+  -webkit-animation-name: SlideInAnimation;
+          animation-name: SlideInAnimation;
+  -webkit-animation-duration: 0.3s;
+          animation-duration: 0.3s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  opacity: 0;
+}
+
+@-webkit-keyframes SlideInAnimation {
+  from {
+    opacity: 0;
+    -webkit-transform: translateY(100px);
+            transform: translateY(100px);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@keyframes SlideInAnimation {
+  from {
+    opacity: 0;
+    -webkit-transform: translateY(100px);
+            transform: translateY(100px);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
 }
 /*# sourceMappingURL=style.css.map */
