--- a/css/style.scss
+++ b/css/style.scss
@@ -14,7 +14,7 @@ html {
 
 body{
     font-family: MyFont, "游ゴシック体", YuGothic, "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック", "Yu Gothic", sans-serif;
-    background-color: #f3efd0;
+    background-color: #e7e7e2;
 }
 
 header{
@@ -75,7 +75,7 @@ header{
         }
         p{
             word-break: break-all;
-            max-width: 50%;
+            max-width: 70%;
             margin-left: auto;
             margin-right: auto;
             font-size: 20px;
@@ -84,7 +84,7 @@ header{
 }
 
 .service_container{
-    height: 100vh;
+    //height: 100vh;
     text-align: center;
     .service_message{
         h2{
@@ -93,13 +93,20 @@ header{
     }
     .service_box{
         //background-color: beige;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        grid-auto-rows: 1fr;
+        grid-gap: 1em;
+        padding: 1em;
         .service_data{
-            background-color: #c9d8b6;
+            //background-color: #c9d8b6;
+            /*
             display: inline-block;
             width: 25%;
             height: auto;
             overflow: hidden;
             border-radius: 4px;
+            */
             a{
                 .img_box{
                     background: #000;
@@ -122,13 +129,15 @@ header{
             .service_content{
                 h3{
                     margin: 10px 5px;
-                    font-size: 20px;
+                    font-size: 18px;
                     text-align: left;
+                    border-bottom: solid 1px #515e63;
                 }
             }
             .link_box{
                 display: flex;
                 margin-right: 2px;
+                border-bottom: solid 1px #414242;
                 .link_button{
                     text-decoration: none;
                     position: relative;
@@ -137,6 +146,7 @@ header{
                     text-align: center;
                     transition: ease .3s;
                     font-weight: bold;
+                    font-size: 14px;
                 }
                 .under_line{
                     &:before{
@@ -165,7 +175,7 @@ header{
 }
 
 .contact_container{
-    height: 100vh;
+    height: 50vh;
     position: relative;
     text-align: center;
     .contact_message{
@@ -176,12 +186,39 @@ header{
         h2{
             font-size: 45px;
         }
-        p{
-            word-break: break-all;
-            max-width: 50%;
-            margin-left: auto;
-            margin-right: auto;
-            font-size: 20px;
+        ul{
+            list-style: none;
+            li{
+                text-align: left;
+                font-size: 20px;
+                margin: 5px 0;
+                a{
+                    text-decoration: none;
+                    color: #000;
+                }
+            }
         }
+    }
+}
+
+/*.slide_in{
+    opacity: 1;
+}*/
+
+.slide_in_animation{
+    animation-name: SlideInAnimation;
+    animation-duration: 0.3s;
+    animation-fill-mode: forwards;
+    opacity: 0;
+}
+
+@keyframes SlideInAnimation{
+    from{
+        opacity: 0;
+        transform: translateY(100px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
     }
 }
