--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,8 @@ header {
 }
 
 .service_container .service_box .service_data .service_content h3 {
-  margin: 10px 5px;
+  margin: 10px 0px;
+  padding: 2px 0px;
   font-size: 18px;
   text-align: left;
   border-bottom: solid 1px #515e63;
@@ -280,5 +281,82 @@ header {
     -webkit-transform: translateY(0);
             transform: translateY(0);
   }
+}
+
+.main_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.main_container .article_container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(300px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-auto-rows: 1fr;
+  grid-gap: 1em;
+  padding: 1em;
+}
+
+.main_container .article_container .article_data {
+  background-color: #fefefe;
+  padding-right: 20px;
+}
+
+.main_container .article_container .article_data a {
+  text-decoration: none;
+}
+
+.main_container .article_container .article_data a .img_box {
+  background: #000;
+  width: 100%;
+  overflow: hidden;
+  border-radius: 4px;
+  margin: 10px;
+}
+
+.main_container .article_container .article_data a .img_box img {
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  width: 100%;
+  -webkit-transform: scale(1.1, 1.1);
+          transform: scale(1.1, 1.1);
+}
+
+.main_container .article_container .article_data a .img_box img:hover {
+  -webkit-transform: scale(1.2, 1.2);
+          transform: scale(1.2, 1.2);
+  opacity: 0.6;
+}
+
+.main_container .article_container .article_data a .article_content {
+  color: #000;
+}
+
+.main_container .admin_info {
+  background-color: #fefefe;
+  border-radius: 15px;
+}
+
+.main_container .admin_info .admin_top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.main_container .admin_info .admin_top .admin_image {
+  margin: 5px;
+}
+
+.main_container .admin_info .admin_top .admin_name {
+  margin-left: 1%;
+}
+
+.main_container .admin_info .admin_description {
+  padding: 0 10px;
 }
 /*# sourceMappingURL=style.css.map */
