--- a/css/style.scss
+++ b/css/style.scss
@@ -128,7 +128,8 @@ header{
             }
             .service_content{
                 h3{
-                    margin: 10px 5px;
+                    margin: 10px 0px;
+                    padding: 2px 0px;
                     font-size: 18px;
                     text-align: left;
                     border-bottom: solid 1px #515e63;
@@ -220,5 +221,60 @@ header{
     to {
         opacity: 1;
         transform: translateY(0);
+    }
+}
+
+.main_container{
+    display: flex;
+    .article_container{
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        grid-auto-rows: 1fr;
+        grid-gap: 1em;
+        padding: 1em;
+        .article_data{
+            background-color: #fefefe;
+            padding-right: 20px;
+            a{
+                text-decoration: none;
+                .img_box{
+                    background: #000;
+                    width: 100%;
+                    overflow: hidden;
+                    border-radius: 4px;
+                    margin: 10px;
+                    img{
+                        height: auto;
+                        object-fit: cover;
+                        transition: all .3s;
+                        width: 100%;
+                        transform:scale(1.1,1.1);
+                        &:hover{
+                            transform:scale(1.2,1.2);
+                            opacity: 0.6;
+                        }
+                    }
+                }
+                .article_content{
+                    color: #000;
+                }
+            }
+        }
+    }
+    .admin_info{
+        background-color: #fefefe;
+        border-radius: 15px;
+        .admin_top{
+            display: flex;
+            .admin_image{
+                margin: 5px;
+            }
+            .admin_name{
+                margin-left: 1%;
+            }
+        }
+        .admin_description{
+            padding: 0 10px;
+        }
     }
 }
