--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ html {
 body {
   font-family: MyFont, "游ゴシック体", YuGothic, "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック", "Yu Gothic", sans-serif;
   background-color: #e7e7e2;
+  margin: 0;
 }
 
 header {
@@ -284,12 +285,28 @@ header {
 }
 
 .main_container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  max-width: 900px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 80px;
+  margin-bottom: 30px;
 }
 
-.main_container .article_container {
+@media screen and (min-width: 891px) {
+  .main_container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media screen and (max-width: 890px) {
+  .main_container {
+    display: box !important;
+  }
+}
+
+.main_container .main_content .article_container {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (minmax(300px, 1fr))[auto-fit];
@@ -297,18 +314,20 @@ header {
   grid-auto-rows: 1fr;
   grid-gap: 1em;
   padding: 1em;
+  text-align: right;
+  margin-left: auto;
 }
 
-.main_container .article_container .article_data {
+.main_container .main_content .article_container .article_data {
   background-color: #fefefe;
   padding-right: 20px;
 }
 
-.main_container .article_container .article_data a {
+.main_container .main_content .article_container .article_data a {
   text-decoration: none;
 }
 
-.main_container .article_container .article_data a .img_box {
+.main_container .main_content .article_container .article_data a .img_box {
   background: #000;
   width: 100%;
   overflow: hidden;
@@ -316,7 +335,7 @@ header {
   margin: 10px;
 }
 
-.main_container .article_container .article_data a .img_box img {
+.main_container .main_content .article_container .article_data a .img_box img {
   height: auto;
   -o-object-fit: cover;
      object-fit: cover;
@@ -327,36 +346,113 @@ header {
           transform: scale(1.1, 1.1);
 }
 
-.main_container .article_container .article_data a .img_box img:hover {
+.main_container .main_content .article_container .article_data a .img_box img:hover {
   -webkit-transform: scale(1.2, 1.2);
           transform: scale(1.2, 1.2);
   opacity: 0.6;
 }
 
-.main_container .article_container .article_data a .article_content {
+.main_container .main_content .article_container .article_data a .article_content {
   color: #000;
+  text-align: left;
+  margin-left: 20px;
 }
 
-.main_container .admin_info {
+.main_container .main_content .article_container .article_data a .article_content h2 {
+  font-size: 20px;
+}
+
+.main_container .main_content .article_container .article_data a .article_content p {
+  text-align: right;
+}
+
+.main_container .main_content .top_title {
+  text-align: left;
+  margin: 0 15px;
+}
+
+.main_container .main_content .top_title h2 {
+  padding: 0.1rem 0rem;
+  margin-bottom: 0.2rem;
+  border-bottom: 3px solid #f6ba33;
+  font-weight: bold;
+  font-size: 26px;
+}
+
+.main_container .side_container .admin_info {
   background-color: #fefefe;
   border-radius: 15px;
+  margin: 1em;
+  padding-bottom: 2px;
 }
 
-.main_container .admin_info .admin_top {
+.main_container .side_container .admin_info .admin_top {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 15px 15px 0 15px;
 }
 
-.main_container .admin_info .admin_top .admin_image {
+.main_container .side_container .admin_info .admin_top .admin_image {
   margin: 5px;
 }
 
-.main_container .admin_info .admin_top .admin_name {
-  margin-left: 1%;
+.main_container .side_container .admin_info .admin_top .admin_image img {
+  border-radius: 50%;
+  -webkit-filter: brightness(95%);
+          filter: brightness(95%);
+  width: 75px;
+  height: auto;
 }
 
-.main_container .admin_info .admin_description {
-  padding: 0 10px;
+.main_container .side_container .admin_info .admin_top .admin_name {
+  margin-left: 1%;
+  font-weight: bold;
+}
+
+.main_container .side_container .admin_info .admin_description {
+  padding: 0 15px;
+  margin-bottom: 0;
+}
+
+.main_container .side_container .admin_info .portfolio_button {
+  background-color: #57837b;
+  padding: 0 15px 0 15px;
+  width: 120px;
+  border-radius: 10px;
+  margin: 0 0 10px 15px;
+  display: block;
+  text-decoration: none;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+.main_container .side_container .admin_info .portfolio_button p {
+  color: #fefefe;
+  margin: 3px 0 5px 0;
+  text-align: center;
+}
+
+.main_container .side_container .admin_info .portfolio_button:hover {
+  background-color: #515e63;
+}
+
+.footer_content {
+  background-color: #7b908d;
+  width: 100%;
+  text-align: center;
+  padding: 10px;
+}
+
+.footer_content a {
+  color: #000;
+  text-decoration: none;
+}
+
+.footer_content p {
+  margin: 0;
 }
 /*# sourceMappingURL=style.css.map */
