--- a/css/style.scss
+++ b/css/style.scss
@@ -15,6 +15,7 @@ html {
 body{
     font-family: MyFont, "游ゴシック体", YuGothic, "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック", "Yu Gothic", sans-serif;
     background-color: #e7e7e2;
+    margin: 0;
 }
 
 header{
@@ -225,56 +226,135 @@ header{
 }
 
 .main_container{
-    display: flex;
-    .article_container{
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-        grid-auto-rows: 1fr;
-        grid-gap: 1em;
-        padding: 1em;
-        .article_data{
-            background-color: #fefefe;
-            padding-right: 20px;
-            a{
-                text-decoration: none;
-                .img_box{
-                    background: #000;
-                    width: 100%;
-                    overflow: hidden;
-                    border-radius: 4px;
-                    margin: 10px;
-                    img{
-                        height: auto;
-                        object-fit: cover;
-                        transition: all .3s;
+    @media screen and (min-width: 891px) {
+        display: flex;
+    }
+    @media screen and (max-width: 890px) {
+        display:box !important;
+    }
+    max-width: 900px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 80px;
+    margin-bottom: 30px;
+    .main_content{
+        .article_container{
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-auto-rows: 1fr;
+            grid-gap: 1em;
+            padding: 1em;
+            text-align: right;
+            margin-left: auto;
+            .article_data{
+                background-color: #fefefe;
+                padding-right: 20px;
+                a{
+                    text-decoration: none;
+                    .img_box{
+                        background: #000;
                         width: 100%;
-                        transform:scale(1.1,1.1);
-                        &:hover{
-                            transform:scale(1.2,1.2);
-                            opacity: 0.6;
+                        overflow: hidden;
+                        border-radius: 4px;
+                        margin: 10px;
+                        img{
+                            height: auto;
+                            object-fit: cover;
+                            transition: all .3s;
+                            width: 100%;
+                            transform:scale(1.1,1.1);
+                            &:hover{
+                                transform:scale(1.2,1.2);
+                                opacity: 0.6;
+                            }
+                        }
+                    }
+                    .article_content{
+                        color: #000;
+                        text-align: left;
+                        margin-left: 20px;
+                        h2{
+                            font-size: 20px;
+                        }
+                        p{
+                            text-align: right;
                         }
                     }
                 }
-                .article_content{
-                    color: #000;
+            }
+        }
+        .top_title{
+            text-align: left;
+            margin: 0 15px;
+            h2{
+                padding: 0.1rem 0rem;
+                margin-bottom: 0.2rem;
+                border-bottom: 3px solid #f6ba33;
+                font-weight: bold;
+                font-size: 26px;
+            }
+        }
+    }
+    .side_container{
+        .admin_info{
+            background-color: #fefefe;
+            border-radius: 15px;
+            margin: 1em;
+            padding-bottom: 2px;
+            .admin_top{
+                display: flex;
+                align-items: center;
+                padding: 15px 15px 0 15px;
+                .admin_image{
+                    margin: 5px;
+                    img{
+                        border-radius: 50%;
+                        filter: brightness(95%);
+                        width: 75px;
+                        height: auto;
+                    }
+                }
+                .admin_name{
+                    margin-left: 1%;
+                    font-weight: bold;
+                }
+            }
+            .admin_description{
+                padding: 0 15px;
+                margin-bottom: 0;
+            }
+            .portfolio_button{
+                background-color: #57837b;
+                padding: 0 15px 0 15px;
+                width: 120px;
+                border-radius: 10px;
+                margin: 0 0 10px 15px;
+                display: block;
+                text-decoration: none;
+                transition: all .3s;
+                p{
+                    color: #fefefe;
+                    margin: 3px 0 5px 0;
+                    text-align: center;
+                }
+                &:hover{
+                    background-color: #515e63;
                 }
             }
         }
     }
-    .admin_info{
-        background-color: #fefefe;
-        border-radius: 15px;
-        .admin_top{
-            display: flex;
-            .admin_image{
-                margin: 5px;
-            }
-            .admin_name{
-                margin-left: 1%;
-            }
-        }
-        .admin_description{
-            padding: 0 10px;
-        }
+}
+
+.footer_content{
+    background-color: #7b908d;
+    width: 100%;
+    text-align: center;
+    padding: 10px;
+    a{
+        color: #000;
+        text-decoration: none;
+    }
+    p{
+        margin: 0;
     }
 }
