--- a/css/style.scss
+++ b/css/style.scss
@@ -80,7 +80,7 @@ header{
         top: 30%;
         left: 50%;
         transform: translateY(-50%) translateX(-50%);
-        h2{
+        h1{
             font-size: 35px;
         }
     }
@@ -420,6 +420,9 @@ header{
             span{
                 text-decoration: none;
                 color: #414242;
+                a{
+                    text-decoration: none;
+                }
                 &:hover{
                     color: #e95656;
                 }
@@ -435,6 +438,20 @@ header{
                 border-bottom: 3px solid #f6ba33;
                 font-weight: bold;
                 font-size: 26px;
+            }
+        }
+        .article_cat_tag{
+            padding-left: 15px;
+            a{
+                background-color: #f6ba33;
+                text-decoration: none;
+                color: #fefefe;
+                padding: 3px;
+                margin-left: 3px;
+                border-radius: 10px;
+                &:nth-of-type(1){
+                    background-color: rgba($color: #57837b, $alpha: 0.7);
+                }
             }
         }
         .article_date{
