--- a/css/style.css
+++ b/css/style.css
@@ -206,9 +206,15 @@ header {
 }
 
 .service_container .service_box .service_data .service_content h3 {
-  margin: 10px 0px;
+  margin: 10px 0px 2px 0px;
   padding: 2px 0px;
   font-size: 18px;
+  text-align: left;
+}
+
+.service_container .service_box .service_data .service_description p {
+  margin: 1px 0px;
+  padding: 2px 0px;
   text-align: left;
   border-bottom: solid 1px #515e63;
 }
