--- a/css/style.scss
+++ b/css/style.scss
@@ -24,6 +24,7 @@ body{
     font-family: 'Montserrat', "游ゴシック体", YuGothic, "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック", "Yu Gothic", sans-serif;
     background-color: #e7e7e2;
     margin: 0;
+    padding: 3%;
 }
 
 header{
@@ -77,7 +78,7 @@ header{
     text-align: center;
     .top_title{
         position: absolute;
-        top: 30%;
+        top: 25%;
         left: 50%;
         transform: translateY(-50%) translateX(-50%);
         h1{
@@ -99,7 +100,7 @@ header{
     .top_message{
         font-size: 16px;
         position: absolute;
-        top: 70%;
+        top: 75%;
         left: 50%;
         transform: translateY(-50%) translateX(-50%);
         text-align: left;
@@ -392,29 +393,61 @@ header{
         }
         .side_cats{
             background-color: #fefefe;
+            border-radius: 15px;
+            margin: 1em;
             .side_cats_title{
                 background:#57837b;
+                border-radius: 15px 15px 0 0;
+                padding-left: 5px;
                 h3{
                     color: #fefefe;
+                    margin: 0;
                 }
             }
             .side_cats_list{
                 ul{
                     list-style:none;
+                    padding: 0 0 0 10px;
+                    margin-top: 5px;
+                    li{
+                        a{
+                            text-decoration: none;
+                            color: #000;
+                            &:hover{
+                                color: #e95656;
+                            }
+                        }
+                    }
                 }
             }
         }
         .side_tags{
             background-color: #fefefe;
+            border-radius: 15px;
+            margin: 1em;
             .side_tags_title{
                 background:#57837b;
+                border-radius: 15px 15px 0 0;
+                padding-left: 5px;
                 h3{
                     color: #fefefe;
+                    margin: 0;
                 }
             }
             .side_tags_list{
                 ul{
                     list-style:none;
+                    padding: 0 0 0 10px;
+                    margin-top: 5px;
+                    li{
+                        a{
+                            text-decoration: none;
+                            color: #000;
+                            &:hover{
+                                color: #e95656;
+                            }
+                        }
+                    }
                 }
             }
         }
@@ -449,8 +482,8 @@ header{
     margin-bottom: 30px;
     .article_box{
         background-color: #fefefe;
-        margin-left: auto;
-        margin-right: auto;
+        margin-left: 2%;
+        margin-right: 2%;
         .breadcrumbs{
             padding-left: 15px;
             span{
